<resources>
    <string name="app_name">Inventory App Stage 2</string>

    <string name="action_new_product">Add new product</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="product_quantity">Product quantity</string>
    <string name="supplier_name">Supplier name</string>
    <string name="supplier_phone">Supplier phone</string>

    <string name="empty">The database is empty. Use the menu in the toolbar to add a new product!</string>

    <string name="sale">Sale</string>
    <string name="order_btn">Order from supplier</string>
    <string name="add">+</string>
    <string name="subtract">-</string>

    <string name="editor_activity_title_new_product">Add a new product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>

    <string name="update_product_failed">Failed to update the product</string>
    <string name="update_product_successful">The product was updated successfully</string>
    <string name="insert_product_failed">Failed to insert the product</string>
    <string name="insert_product_successful">The product was inserted successfully</string>
    <string name="delete_product_failed">The product could not be deleted</string>
    <string name="delete_product_successful">The product was deleted successfully</string>
    <string name="change_unsaved">"The product cannot be saved. One or more fields are invalid!"</string>

    <string name="dialog_delete_msg">Do you want to delete the product?</string>
    <string name="unsaved_changes_msg">Do you want to leave without saving?</string>
    <string name="delete">Delete</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>

    <string name="action_save">Save</string>


</resources>