<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of products -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/product_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/main_text_color" />

        <TextView
            android:id="@+id/item_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/main_text_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/product_quantity"
            android:textColor="@color/details_text_color" />

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/details_text_color" />

        <TextView
            android:id="@+id/btn_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:text="@string/sale"
            android:textColor="@color/red"
            android:textSize="@dimen/_20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/product_price"
            android:textColor="@color/details_text_color" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/details_text_color" />
    </LinearLayout>
</LinearLayout>